# achieve

./: .gitignore  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  commands.rs  db.rs  desktop.rs  email.rs  engine.rs  idle.rs  lib.rs  main.rs  media.rs  model.rs  niri.rs  notify.rs  reminder.rs  shutdown.rs  sound.rs  window.rs
src/lib/: api.ts  format.ts  reminders.ts  risk.ts  sound.ts  store.svelte.ts  types.ts
src/lib/components/: BreakSettingsPopover.svelte  CategoryPicker.svelte  DatePopover.svelte  NoteCard.svelte  ReminderEditor.svelte  TaskEditor.svelte  TaskNotes.svelte
src/lib/icons/: Icon.svelte
src/lib/ui/: ActivityChart.svelte  BottomNav.svelte  DatePicker.svelte  Markdown.svelte  MarkdownEditor.svelte  Overlay.svelte  ProgressRing.svelte  Segmented.svelte  Select.svelte  TimePicker.svelte  WindowFrame.svelte
src/lib/views/: BreakView.svelte  DashboardView.svelte  NotesView.svelte  TasksView.svelte  VeilView.svelte
