[package]
name = "achieve"
version = "0.1.0"
description = "Proactive day-companion that tracks where time really goes."
authors = ["hamidlabs"]
edition = "2021"

[lib]
# The library that holds the app; main.rs is a thin wrapper around it.
name = "achieve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
# system D-Bus for the best-effort logind shutdown guard (already in the tree
# via tauri, pinned here so we can use it directly)
zbus = "5"
libc = "0.2"
# Blocking HTTP client for the Brevo transactional email API. Blocking fits the
# engine's sync background thread; rustls avoids a system OpenSSL dependency.
ureq = { version = "2", features = ["json", "tls"], default-features = false }

[profile.dev]
incremental = true
